tweakes to swagger
