# app/static/openapi.yaml
@@ -16,7 +16,7 @@ paths:
       responses:
         "200":
           description: "success"
-  /automobiles:
+  /automobiles/:
     get:
       tags:
       - "automobiles"
@@ -38,12 +38,27 @@ paths:
       produces:
       - "application/json"
       parameters:
-      - in: "body"
-        name: "body"
-        description: "Automobile data to be added"
-        required: true
-        schema:
-          $ref: "#/definitions/Automobile"
+        - in: "body"
+          name: "automobile"
+          description: "properties and values for new automobile"
+          schema:
+            required:
+              - "make"
+              - "model"
+              - "year"
+            properties:
+              make:
+                type: "string"
+                default: "Aptera"
+              model:
+                type: "string"
+                default: "Paradigm"
+              year:
+                type: "integer"
+                default: 2022
+              color:
+                type: "string"
+                default: "black"
       responses:
         "200":
           description: "success"
@@ -89,6 +104,11 @@ paths:
         required: true
         type: "integer"
         format: "int64"
+      - in: "body"
+        name: "automobile"
+        description: "The properties to update (make, model, year, color)"
+        schema:
+          type: "object"
       responses:
         "200":
           description: "success"
